<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_anonymous"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.androidasmt.ui.anonymous.LoginFragment"
        android:label="@string/fragment_title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"
            app:enterAnim="@anim/left_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/right_in"
            app:popExitAnim="@anim/right_out" />
        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@anim/left_in"
            app:exitAnim="@anim/left_out"
            app:popEnterAnim="@anim/right_in"
            app:popExitAnim="@anim/right_out" />
    </fragment>
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.example.androidasmt.ui.anonymous.ForgotPasswordFragment"
        android:label="@string/fragment_title_forgotPassword"
        tools:layout="@layout/fragment_forgot_password" />
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.androidasmt.ui.anonymous.RegisterFragment"
        android:label="@string/fragment_title_register"
        tools:layout="@layout/fragment_register" />
</navigation>